--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,7 +26,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.facebook.react:react-native:+'
-    compile 'org.altbeacon:android-beacon-library:2+'
+    implement fileTree(dir: 'libs', include: ['*.jar'])
+    implement 'com.facebook.react:react-native:+'
+    implement 'org.altbeacon:android-beacon-library:2+'
 }
